@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-23T02:02:09Z",
-  "count_outdated" : 348,
-  "uniques_outdated" : 212,
+  "timestamp" : "2022-10-26T08:24:32Z",
+  "count_outdated" : 352,
+  "uniques_outdated" : 215,
   "count" : 353,
   "uniques" : 216,
   "clones" : [
-    {
-      "timestamp": "2022-10-12T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 4, 4 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 3 ]
-    },
     {
       "timestamp": "2022-10-20T00:00:00Z",
       "count": 1,
