@@ -1,12 +1,7 @@
 {
-  "count": 5,
-  "uniques": 4,
+  "count": 1,
+  "uniques": 1,
   "clones": [
-    {
-      "timestamp": "2022-10-12T00:00:00Z",
-      "count": 4,
-      "uniques": 3
-    },
     {
       "timestamp": "2022-10-20T00:00:00Z",
       "count": 1,
